--- a/.env
+++ b/.env
@@ -3,7 +3,10 @@ signedMessage=Login
 
 # JWT
 JWT_SECRET=JWT_SECRET
-ACCESS_TOKEN_EXPIRY=1h
+ACCESS_TOKEN_EXPIRY=1y
 
 # Other
 PORT=3000
+
+# Database
+MONGO_URI=mongodb+srv://anonymus:lam05092001@anonymus.hvv4fsl.mongodb.net/horse-racing?retryWrites=true&w=majority
