--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,12 @@ services:
       - '3000:3000'
     depends_on:
       - db
+  nginx:
+    restart: always
+    image: nginx:latest
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
+    ports:
+      - '80:80'
+    depends_on:
+      - app   
