--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "short-unique-id": "^5.0.3",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
