--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ services:
   db:
     image: mongo
     restart: always
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"  
   app:
     build: .
     image: myapp:latest
@@ -10,6 +14,7 @@ services:
       - '3000:3000'
     depends_on:
       - db
+      - redis
   nginx:
     restart: always
     image: nginx:latest
