add logout function

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ PORT=3000
 
 # Database
 MONGO_URI=mongodb+srv://anonymus:lam05092001@anonymus.hvv4fsl.mongodb.net/horse-racing?retryWrites=true&w=majority
+
+# Redis
+REDIS_URL=redis://localhost:6379
