fix socket flow

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Blockchain
 signedMessage=Login
+chainRpc=https://patient-magical-cloud.ethereum-goerli.quiknode.pro/fdf0bd85a763748b24d9acfdaecebcbb636262d6/
+depositMoneyContractAddress=0xAF47c12DbAf431B1b02B04AbAf57767710743f3c
 
 # JWT
 JWT_SECRET=JWT_SECRET
