--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"  
-  app:
-    build: .
-    image: myapp:latest
-    ports:
-      - '3000:3000'
-    depends_on:
-      - db
-      - redis-db
+#  app:
+#    build: .
+#    image: myapp:latest
+#    ports:
+#      - '3000:3000'
+#    depends_on:
+#      - db
+#      - redis-db
   nginx:
     restart: always
     image: nginx:latest
@@ -22,5 +22,5 @@ services:
       - ./nginx:/etc/nginx/conf.d
     ports:
       - '80:80'
-    depends_on:
-      - app   
+#    depends_on:
+#      - app
