--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server {
     # For all URLs on port 80,
     location / {
         # Send them to port 3000
-        proxy_pass http://app:3000;
+        proxy_pass http://localhost:3000;
         # Add some headers
         proxy_set_header Host $host;
     }
