--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,18 @@ services:
   db:
     image: mongo
     restart: always
-    ports:
-      - 8081:8081
-  redis-db:
+  redis:
     image: redis:latest
     ports:
-      - "6379:6379"
-#  app:
-#    build: .
-#    image: myapp:latest
-#    ports:
-#      - '3000:3000'
-#    depends_on:
-#      - db
-#      - redis-db
+      - "6379:6379"  
+  app:
+    build: .
+    image: myapp:latest
+    ports:
+      - '3000:3000'
+    depends_on:
+      - db
+      - redis
   nginx:
     restart: always
     image: nginx:latest
@@ -24,5 +22,5 @@ services:
       - ./nginx:/etc/nginx/conf.d
     ports:
       - '80:80'
-#    depends_on:
-#      - app
+   depends_on:
+     - app
